feat: @emotion/server install시 발생하는 dependency 문제 해결 (#1) - @emotion/server 설치시 @emotion/css를 dependency로 적용

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,2 +1,7 @@
 nodeLinker: pnp
 yarnPath: .yarn/releases/yarn-3.5.1.cjs
+
+packageExtensions:
+  "@emotion/server@*":
+    dependencies:
+      "@emotion/css": "^11.0.0-rc.0"
