--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,15 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
-.env*.local
+.env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
+
 
 # typescript
 *.tsbuildinfo
