--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -5,3 +5,6 @@ packageExtensions:
   "@emotion/server@*":
     dependencies:
       "@emotion/css": "^11.0.0-rc.0"
+  "@testing-library/user-event@*":
+    dependencies:
+      "@testing-library/dom": "^8.11.4"
