--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: "16.x"
-      - run: yarn install --frozen-lockfile
+      - run: yarn install
       - run: yarn test
       - name: if fail
         uses: actions/github-script@0.2.0
