--- a/website/package.json
+++ b/website/package.json
@@ -12,10 +12,13 @@
     "test:cov": "jest --coverage"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.15",
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "deepmerge": "^4.3.1",
     "emotion-reset": "^3.0.1",
+    "graphql": "^16.6.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
