--- a/website/tsconfig.json
+++ b/website/tsconfig.json
@@ -6,14 +6,16 @@
     "skipLibCheck": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
+    "allowSyntheticDefaultImports": true,
     "noEmit": true,
     "esModuleInterop": true,
     "module": "esnext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
     "incremental": true,
+    "jsx": "preserve",
+    "jsxImportSource": "@emotion/react",
     "plugins": [
       {
         "name": "next"
