--- a/package.json
+++ b/package.json
@@ -7,14 +7,13 @@
   "packageManager": "yarn@3.5.1",
   "private": true,
   "scripts": {
-    "dev": "yarn workspace website dev",
-    "build": "yarn workspace website build",
-    "start": "yarn workspace website start",
-    "lint": "yarn workspace website lint",
-    "test": "yarn workspace website test"
+    "dev": "yarn workspace @seoko/web dev",
+    "build": "yarn workspace @seoko/web build",
+    "start": "yarn workspace @seoko/web start",
+    "lint": "yarn workspace @seoko/web lint",
+    "test": "yarn workspace @seoko/web test"
   },
   "workspaces": [
-    "website",
     "packages/*"
   ],
   "devDependencies": {
