--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@seoko/eslint-config": "workspace:*",
+    "@seoko/tsconfig": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
