fix: @types/react 버전이 맞지않아 발생하는 에러 수정

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -14,5 +14,5 @@ packageExtensions:
     dependencies:
       "@storybook/react-vite": "*"
       "vite": "*"
-      "react": "*"
-      "react-dom": "*"
+      "react": "^18.2.0"
+      "react-dom": "^18.2.0"
