--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -10,6 +10,9 @@
     "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "emotion-reset": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -23,8 +26,8 @@
     "@storybook/react": "^7.0.20",
     "@storybook/react-vite": "^7.0.20",
     "@storybook/testing-library": "^0.0.14-next.2",
-    "@types/react": "^17.0.37",
-    "@types/react-dom": "^17.0.11",
+    "@types/react": "18.2.0",
+    "@types/react-dom": "18.2.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.20",
     "typescript": "^4.5.2",
