--- a/app/package.json
+++ b/app/package.json
@@ -28,6 +28,7 @@
   "devDependencies": {
     "@seoko/eslint-config": "workspace:*",
     "@seoko/tsconfig": "workspace:*",
+    "@seoko/ui": "workspace:*",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
