--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@seoko/eslint-config": "workspace:*",
+    "@seoko/theme": "workspace:*",
     "@seoko/tsconfig": "workspace:*",
     "@storybook/addon-essentials": "^7.0.20",
     "@storybook/addon-interactions": "^7.0.20",
@@ -30,7 +31,8 @@
     "@types/react-dom": "18.2.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.20",
-    "typescript": "^4.5.2",
+    "tsup": "^6.7.0",
+    "typescript": "^5.0.4",
     "vite": "^4.3.9"
   }
 }
