--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,13 +1,26 @@
 {
   "name": "@seoko/ui",
   "version": "0.1.0",
-  "main": "src/index.tsx",
-  "types": "src/index.d.ts",
   "license": "MIT",
+  "main": "./dist/index.js",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.ts",
+  "files": [
+    "dist",
+    "package.json"
+  ],
+  "exports": {
+    ".": {
+      "require": "./dist/index.js",
+      "import": "./dist/index.mjs",
+      "types": "./dist/index.d.ts"
+    }
+  },
   "scripts": {
     "lint": "eslint \"**/*.ts*\"",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build:ui": "tsup",
+    "build:storybook": "storybook build"
   },
   "dependencies": {
     "@emotion/react": "^11.11.0",
