feat: theme 생성에 따른 폴더 이동 (#12)

--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -1,3 +1,6 @@
 {
-  "extends": "@seoko/tsconfig/base.json"
+  "extends": "@seoko/tsconfig/base.json",
+  "compilerOptions": {
+    "lib": ["esnext"]
+  }
 }
