chore: test 관련 script 추가

--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "start": "yarn workspace @seoko/app start",
     "lint": "yarn workspace @seoko/app lint",
     "test": "yarn workspace @seoko/app test",
+    "test:watch": "yarn workspace @seoko/app test:watch",
+    "test:coverage": "yarn workspace @seoko/app test:coverage",
     "build:ui": "yarn workspace @seoko/ui build:ui",
     "build:theme": "yarn workspace @seoko/theme build"
   },
