--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -44,6 +44,7 @@
     "@types/react-dom": "18.2.0",
     "prop-types": "^15.8.1",
     "storybook": "^7.0.20",
+    "storybook-dark-mode": "^3.0.0",
     "tsup": "^6.7.0",
     "typescript": "^5.0.4",
     "vite": "^4.3.9"
