--- a/app/package.json
+++ b/app/package.json
@@ -54,6 +54,7 @@
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
     "storybook": "^7.1.0-alpha.41",
+    "storybook-dark-mode": "^3.0.0",
     "typescript": "5.0.4"
   }
 }
