--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -21,3 +21,7 @@ packageExtensions:
     dependencies:
       "@babel/core": "*"
       "webpack": "*"
+
+  "babel-loader@*":
+    dependencies:
+      "webpack": "*"
