--- a/app/package.json
+++ b/app/package.json
@@ -11,18 +11,14 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "compile:types": "tsc --noEmit"
   },
   "dependencies": {
-    "@apollo/client": "^3.7.15",
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
-    "apollo-upload-client": "^17.0.0",
-    "deepmerge": "^4.3.1",
     "emotion-reset": "^3.0.1",
-    "graphql": "^16.6.0",
-    "lodash.isequal": "^4.5.0",
     "next": "13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -49,7 +45,6 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
-    "@types/apollo-upload-client": "^17.0.2",
     "@types/lodash.isequal": "^4.5.6",
     "@types/node": "20.2.5",
     "@types/react": "18.2.0",
