--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,8 @@
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@tanstack/react-query": "^4.29.19",
+    "axios": "^1.4.0",
     "emotion-reset": "^3.0.1",
     "next": "13.4.4",
     "react": "18.2.0",
@@ -42,6 +44,7 @@
     "@storybook/nextjs": "^7.1.0-alpha.41",
     "@storybook/react": "^7.1.0-alpha.41",
     "@storybook/testing-library": "^0.2.0",
+    "@tanstack/react-query-devtools": "^4.29.19",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
