--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -11,7 +11,7 @@
     },
     "jsx": "preserve",
     "jsxImportSource": "@emotion/react",
-    "strictNullChecks": true
+    "strict": true
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
   "exclude": ["node_modules"]
