--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
     "eslint": "^8.41.0",
     "prettier": "^2.8.8",
     "typescript": "^5.0.4"
+  },
+  "peerDependencies": {
+    "@emotion/react": "11.x",
+    "@emotion/styled": "11.x",
+    "react": "18.x",
+    "react-dom": "18.x"
   }
 }
