--- a/app/package.json
+++ b/app/package.json
@@ -18,6 +18,7 @@
     "@emotion/react": "^11.11.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@seoko/ui": "workspace:*",
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
     "emotion-reset": "^3.0.1",
