--- a/packages/theme/package.json
+++ b/packages/theme/package.json
@@ -8,15 +8,15 @@
   "exports": {
     ".": {
       "require": "./dist/index.js",
-      "import": "./dist/index.mjs",
+      "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     }
   },
   "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsup"
+    "build": "tsc"
   },
   "devDependencies": {
     "@seoko/tsconfig": "workspace:*",
