--- a/packages/theme/tsconfig.json
+++ b/packages/theme/tsconfig.json
@@ -1,6 +1,11 @@
 {
   "extends": "@seoko/tsconfig/base.json",
   "compilerOptions": {
-    "lib": ["esnext"]
-  }
+    "lib": ["esnext"],
+    "sourceMap": true,
+    "outDir": "dist",
+    "baseUrl": "."
+  },
+  "include": ["."],
+  "exclude": ["dist", "node_modules"]
 }
