--- a/package.json
+++ b/package.json
@@ -32,9 +32,10 @@
     "@storybook/react": "^7.1.0-alpha.41",
     "@storybook/testing-library": "^0.2.0",
     "@tanstack/react-query-devtools": "^4.29.19",
-    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/jest-dom": "^6.0.1",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^29.5.3",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
