chore: dependency 에러 수정

--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -8,3 +8,9 @@ packageExtensions:
   "@storybook/nextjs@*":
     dependencies:
       "webpack": "*"
+  axios@*:
+    dependencies:
+      debug: "*"
+  debug@*:
+    dependencies:
+      supports-color: "8.1.1"
