--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
   "dependencies": {
     "@tanstack/react-query": "^4.29.19",
     "axios": "^1.4.0",
+    "markdown-to-jsx": "^7.3.2",
     "next": "13.4.13",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-syntax-highlighter": "^15.5.0",
     "remove-markdown": "^0.5.0",
     "sharp": "^0.32.5"
   },
@@ -40,6 +42,7 @@
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
     "@types/react-dom": "18.2.7",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "@types/remove-markdown": "^0.3.1",
     "@types/testing-library__jest-dom": "^5.14.9",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
