--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "build:analyze": "ANALYZE=true next build",
     "start": "next start",
     "lint": "next lint",
     "test": "jest",
@@ -27,6 +28,7 @@
     "sharp": "^0.32.5"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.5.3",
     "@storybook/addon-essentials": "^7.1.0-alpha.41",
     "@storybook/addon-interactions": "^7.1.0-alpha.41",
     "@storybook/addon-links": "^7.1.0-alpha.41",
