--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,9 +53,7 @@ jobs:
         run: |
           if [ `docker ps -f "name=front" -q` ]
           then
-              docker rm -f $(docker ps -f "name=${{secrets.FRONT_DOCKER_IMAGE_NAME}}" -q)
-              docker rmi -f $( docker images -f "reference=${{secrets.DOCKER_REGISTRY_URL}}/${{secrets.FRONT_DOCKER_IMAGE_NAME}}" -q)
+              docker rm -f $(docker ps -f "name=front" -q)
           fi
-          docker image prune -a
           docker pull ${{secrets.DOCKER_REGISTRY_URL}}/${{secrets.FRONT_DOCKER_IMAGE_NAME}}:${{ github.sha }}
           docker run -dit -p 3000:3000 --name front ${{secrets.DOCKER_REGISTRY_URL}}/${{secrets.FRONT_DOCKER_IMAGE_NAME}}:${{ github.sha }}
