--- a/package.json
+++ b/package.json
@@ -62,6 +62,8 @@
     "eslint-plugin-storybook": "^0.6.13",
     "jest": "^29.6.2",
     "jest-environment-jsdom": "^29.6.2",
+    "msw": "^2.3.0",
+    "msw-storybook-addon": "^2.0.2",
     "postcss": "8.4.27",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.4.0",
@@ -69,5 +71,10 @@
     "tailwindcss": "3.3.3",
     "typescript": "^5.0.4"
   },
-  "packageManager": "yarn@3.6.1"
+  "packageManager": "yarn@3.6.1",
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
+  }
 }
